# lead-agent

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
configs/: icp_cpa_firm.yaml  icp_law_boutique.yaml
docs/: ARCHITECTURE.md  COST_ANALYSIS.md  DECISIONS.md  ICP_GUIDE.md  run-log.md
scripts/: audit_noise_filter.py  audit_thin_text.py  rescore_from_cache.py  threshold_sweep.py  topup_rescore.py  weight_sweep.py
src/lead_agent/: __init__.py  cli.py  config.py  eval.py  extractor.py  llm.py  pipeline.py  scorer.py  scraper.py  search.py  storage.py
tests/: test_cli.py  test_config.py  test_eval.py  test_extractor.py  test_llm.py  test_pipeline.py  test_scorer.py  test_scraper.py  test_search.py  test_storage.py
tests/eval/: eval_set_cpa.yaml  eval_set_law.yaml  run_evals.py
