[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lead-agent"
version = "0.1.0"
description = "ICP-driven lead generation agent for professional services firms"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "litellm>=1.40",
    "instructor>=1.3",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "tavily-python>=0.3",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "aiosqlite>=0.20",
]

[project.scripts]
lead-agent = "lead_agent.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/lead_agent"]

[dependency-groups]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-httpx>=0.30",
    "ruff>=0.4",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "ANN", "RUF"]
ignore = ["ANN101", "ANN102"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
